--- a/2DAnimatedGameSummitive/2DAnimatedGameSummitive.csproj
+++ b/2DAnimatedGameSummitive/2DAnimatedGameSummitive.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enemy.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -65,7 +66,20 @@
       <DependentUpon>GameScreen.cs</DependentUpon>
     </Compile>
     <Compile Include="Gem.cs" />
+    <Compile Include="HighScore.cs" />
+    <Compile Include="HighScoreScreen.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="HighScoreScreen.Designer.cs">
+      <DependentUpon>HighScoreScreen.cs</DependentUpon>
+    </Compile>
     <Compile Include="Laser.cs" />
+    <Compile Include="Level2.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Level2.Designer.cs">
+      <DependentUpon>Level2.cs</DependentUpon>
+    </Compile>
     <Compile Include="MenuScreen.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -90,6 +104,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GameScreen.resx">
       <DependentUpon>GameScreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HighScoreScreen.resx">
+      <DependentUpon>HighScoreScreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Level2.resx">
+      <DependentUpon>Level2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MenuScreen.resx">
       <DependentUpon>MenuScreen.cs</DependentUpon>
@@ -143,6 +163,19 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Volo Battle Theme - Pokémon Legends_ Arceus [Piano Arrangement].mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\winSound.wav" />
+    <None Include="Resources\enemyHit.wav" />
+    <Content Include="Resources\HighScoreTime.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <None Include="Resources\LaserHit.wav" />
+    <None Include="Resources\SilverMedal.png" />
+    <None Include="Resources\Gold Medal1.png" />
+    <None Include="Resources\bromze Medal.png" />
+    <None Include="Resources\Gold Medal.png" />
+    <None Include="Resources\Red Medal.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
